# engram

./: Cargo.toml  README.md  config.default.toml
src/: config.rs  lib.rs  main.rs  metrics.rs
src/generators/: glyph.rs  graph.rs  interference.rs  mod.rs  stipple.rs  svg_lines.rs
